--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
+server.porte = 8081
 test.client.address.UPL=http://localhost:8082/addresses
 
-spring.data.mongodb.uri: mongodb://localhost:27017/hexagoanal
+# spring.data.mongodb.uri: mongodb://localhost:27017/hexagoanal
+
+mongo.image=mongo
+mongo.restart=always
+mongo.ports=27017:27017
+mongo.environment.mongo_initdb_root_username=root
+mongo.environment.mongo_initdb_root_password=example
+
+mongo-express.image=mongo-express
+mongo-express.restart=always
+mongo-express.ports=27017:27017
+mongo-express.environment.me_config_mongodb_adminusername=root
+mongo-express.environment.me_config_mongodb_adminpassword=example
+mongo-express.environment.me_config_mongodb_url=mongodb://root:exampleGmongo:27017/
